<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/b_choose_bonded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_get_bonded"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/b_choose_discovery"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/button_get_discovery"
                    android:layout_gravity="center_horizontal" />
                <Button
                    android:id="@+id/b_cancel_discovery"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/cancel_discovery"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_message_bar"
            android:text="@string/no_bluetooth_message"
            android:layout_marginTop="@dimen/ver_padding"
            android:textSize="36sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pressure"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_humidity"
            android:textSize="25sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_remember_mac"
            android:textSize="17sp"
            android:id="@+id/cb_remember_device_checkbox">

        </CheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_change_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_from_sites"/>

            <Button
                android:id="@+id/b_reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reconnect" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/lv_listViewDeices"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_forecast"
                android:textSize="30sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        </FrameLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



